Alignment issue resolved

--- a/src/app/features/projects/projects/projects.component.css
+++ b/src/app/features/projects/projects/projects.component.css
@@ -1,8 +1,3 @@
-.pull-right {
-  right: 0;
-  position: absolute;
-}
-
 .avatar-image {
   background-image: url(../../../../assets/images/abhijit-kar.png);
   background-size: cover;
