--- a/src/app/features/skills/skills/skills.component.css
+++ b/src/app/features/skills/skills/skills.component.css
@@ -1,5 +1,5 @@
 .pull-right {
-  right: 0;
+  right: 6px;
   position: absolute;
 }
 
